// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toSetRolePermission operation should fail due to invalid permission value 1`] = `
Object {
  "message": "    
    [32m- expected  - 62[39m
    [31m+ received  +  1[39m
    
    [2m  Array [[22m
    [32m-   \\"1\\",[39m
    [32m-   \\"2\\",[39m
    [32m-   \\"4\\",[39m
    [32m-   \\"8\\",[39m
    [32m-   \\"16\\",[39m
    [32m-   \\"32\\",[39m
    [32m-   \\"64\\",[39m
    [32m-   \\"128\\",[39m
    [32m-   \\"256\\",[39m
    [32m-   \\"512\\",[39m
    [32m-   \\"1024\\",[39m
    [32m-   \\"2048\\",[39m
    [32m-   \\"4096\\",[39m
    [32m-   \\"8192\\",[39m
    [32m-   \\"16384\\",[39m
    [32m-   \\"32768\\",[39m
    [32m-   \\"65536\\",[39m
    [32m-   \\"131072\\",[39m
    [32m-   \\"262144\\",[39m
    [32m-   \\"524288\\",[39m
    [32m-   \\"1048576\\",[39m
    [32m-   \\"2097152\\",[39m
    [32m-   \\"4194304\\",[39m
    [32m-   \\"8388608\\",[39m
    [32m-   \\"16777216\\",[39m
    [32m-   \\"33554432\\",[39m
    [32m-   \\"67108864\\",[39m
    [32m-   \\"134217728\\",[39m
    [32m-   \\"268435456\\",[39m
    [32m-   \\"536870912\\",[39m
    [32m-   \\"1073741824\\",[39m
    [32m-   \\"CREATE_INSTANT_INVITE\\",[39m
    [32m-   \\"KICK_MEMBERS\\",[39m
    [32m-   \\"BAN_MEMBERS\\",[39m
    [32m-   \\"ADMINISTRATOR\\",[39m
    [32m-   \\"MANAGE_CHANNELS\\",[39m
    [32m-   \\"MANAGE_GUILD\\",[39m
    [32m-   \\"ADD_REACTIONS\\",[39m
    [32m-   \\"VIEW_AUDIT_LOG\\",[39m
    [32m-   \\"VIEW_CHANNEL\\",[39m
    [32m-   \\"SEND_MESSAGES\\",[39m
    [32m-   \\"SEND_TTS_MESSAGES\\",[39m
    [32m-   \\"MANAGE_MESSAGES\\",[39m
    [32m-   \\"EMBED_LINKS\\",[39m
    [32m-   \\"ATTACH_FILES\\",[39m
    [32m-   \\"READ_MESSAGE_HISTORY\\",[39m
    [32m-   \\"MENTION_EVERYONE\\",[39m
    [32m-   \\"USE_EXTERNAL_EMOJIS\\",[39m
    [32m-   \\"CONNECT\\",[39m
    [32m-   \\"SPEAK\\",[39m
    [32m-   \\"MUTE_MEMBERS\\",[39m
    [32m-   \\"DEAFEN_MEMBERS\\",[39m
    [32m-   \\"MOVE_MEMBERS\\",[39m
    [32m-   \\"USE_VAD\\",[39m
    [32m-   \\"PRIORITY_SPEAKER\\",[39m
    [32m-   \\"CHANGE_NICKNAME\\",[39m
    [32m-   \\"MANAGE_NICKNAMES\\",[39m
    [32m-   \\"MANAGE_ROLES\\",[39m
    [32m-   \\"MANAGE_WEBHOOKS\\",[39m
    [32m-   \\"MANAGE_EMOJIS\\",[39m
    [32m-   \\"STREAM\\",[39m
    [32m-   \\"VIEW_GUILD_INSIGHTS\\",[39m
    [31m+   \\"BANANA\\",[39m
    [2m  ][22m
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should fail due to role permissions was not updated 1`] = `
Object {
  "message": "    
    expected: role permissions change to: ATTACH_FILES
    received: permissions were not changed
",
  "pass": false,
}
`;

exports[`testing toSetRolePermission operation should fail due to undefined roleIdentifier 1`] = `
Object {
  "message": "    
    expected: data to identifier the role (id or name)
    received: null
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due expected name did not match to received 1`] = `
Object {
  "message": "    
    expected: role permissions change to: ATTACH_FILES
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due expected name did not match to received 2`] = `
Object {
  "message": "    
    expected: role permissions change to: null
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due to permissions should not change (isNot true) 1`] = `
Object {
  "message": "    
    expected: role permissions not change to: ADMINISTRATOR
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due to permissions should not change (isNot true) 2`] = `
Object {
  "message": "    
    expected: role permissions not change to: ADMINISTRATOR and BAN_MEMBERS
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due to permissions should not change (isNot true) 3`] = `
Object {
  "message": "    
    expected: role permissions not change to: ADMINISTRATOR (and 2 others)
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return false due to invalid permission parameter (object) 1`] = `
Object {
  "message": "    
    expected: permissions to be null, undefined or an array
    received: object
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return false due to invalid permission parameter (undefined) 1`] = `
Object {
  "message": "    
    expected: permissions to be null, undefined or an array
    received: object
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return false due to not found role 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return true due to isNot true and no role change 1`] = `
Object {
  "pass": true,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return true due to role changed permissions (isNot false) 1`] = `
Object {
  "pass": true,
  "testName": "toSetRolePermission",
}
`;
